Revise README.md for improved clarity and structure
Updated README.md to enhance documentation with detailed sections on features, requirements, installation, usage, architecture, and contribution guidelines.